update style.css to fix overflow
fixed overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,7 +94,7 @@
   font-size: 2rem;
   height: fit-content;
   padding-left: 25rem;
-  width: 70vw;
+  /*width: 70vw; */
   text-align: left;
   }
   
